--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "dathaton"
+name = "fiap-ml-03"
 version = "0.1.0"
 requires-python = ">=3.12"
 dependencies = [
@@ -11,4 +11,7 @@ dependencies = [
     "pytest>=8.3.5",
     "requests>=2.32.3",
     "scikit-learn>=1.6.1",
+    "seaborn>=0.13.0",  
+    "matplotlib>=3.8.0", 
+    "streamlit>=1.32.0",
 ]
